# animate

./: Cargo.toml  README.md
animate/: Cargo.toml
animate-core/: Cargo.toml
animate-core/src/: easing.rs  lib.rs  macros.rs
animate-core/src/mode/: alternate.rs  cycle.rs  mod.rs  once.rs
animate-core/src/types/: mod.rs
animate-core/src/types/ratatui/: color.rs
animate-macros/: Cargo.toml
animate-macros/src/: lib.rs
animate/benches/: animate.rs
animate/examples/: minimal.rs  showcase.rs
animate/src/: lib.rs
grease/: Cargo.toml
grease-core/: Cargo.toml
grease-core/src/: easing.rs  grease.rs  lib.rs
grease-core/src/mode/: alternate.rs  cycle.rs  once.rs
grease-core/src/types/: mod.rs  num.rs  string.rs
grease-core/src/types/ratatui/: color.rs
grease-macros/: Cargo.toml
grease-macros/src/: lib.rs
grease/src/: lib.rs
