[package]
authors = ["vyfor"]
categories = ["command-line-interface"]
description = "Animation library for Ratatui"
edition = "2024"
keywords = ["terminal", "tui", "cli", "animation", "ratatui"]
license = "MIT"
name = "animate-macros"
repository = "https://github.com/vyfor/animate"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
